--- a/webpage/public/index.html
+++ b/webpage/public/index.html
@@ -15,6 +15,16 @@
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?4f07e182ba7be71d24d551c932096144";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
